# rust-cktap

./: .gitignore  Cargo.toml  Package.swift  README.md  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: swift-release.yml  test.yml
cktap-android/: README.md  justfile  settings.gradle.kts
cktap-android/docs/: DOKKA_LANDING.md
cktap-android/lib/: build.gradle.kts  proguard-rules.pro
cktap-android/scripts/dev/: build-dev-macos-aarch64.sh
cktap-android/scripts/release/: build-release-macos-aarch64.sh
cktap-ffi/: Cargo.toml  uniffi-android.toml  uniffi.toml
cktap-ffi/src/: error.rs  sats_card.rs  sats_chip.rs  tap_signer.rs
cktap-swift/: README.md
cktap-swift/Sources/CKTap/: cktap_ffi.swift
cktap-swift/Tests/CKTapTests/: CKTapTests.swift
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: apdu.rs  error.rs  sats_card.rs  sats_chip.rs  shared.rs  tap_signer.rs
scripts/: swift_create_xcframework_archive.sh  swift_update_package_checksum.py
