[workspace]
resolver = "2"
members = ["lib", "cli", "cktap-ffi"]

[workspace.package]
edition = "2024"
authors = ["rust-cktap developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/notmandatory/rust-cktap"
rust-version = "1.85.0"

[profile.release-smaller]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
# NOTE: do not set `strip = true` here. uniffi-bindgen's `--library` mode reads
# UNIFFI_META_* symbols from the compiled .so to discover the interface, and
# stripping at compile time removes them. Strip the copies that ship in the
# Android AAR explicitly (e.g. with `llvm-strip`) after bindings have been
# generated — see cktap-android/scripts/release/build-release-*.sh.